SAR Blai Sandbox/src/objects/rec_AB_no_proc__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Clasif_tipo_rec_RES__c</fullName>
        <label>Clasificación tipo recomendador RES</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_Recomendadora__c</fullName>
        <label>Entidad Recomendadora</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_la_cuenta__c</fullName>
        <label>Nombre de la cuenta</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propietario_de_la_cuenta__c</fullName>
        <label>Propietario de la cuenta</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Recomendadores A-B no procesados</label>
</CustomObject>